--- a/src/pages/reports/index.css
+++ b/src/pages/reports/index.css
@@ -15,26 +15,18 @@
   display: block;
 }
 
-.sa-flexbox-thead{
-  text-align: center;
-}
-
-
-table {
+.sa-flexbox-table {
   border-collapse: collapse;
 }
 
-thead {
+.thead {
   background-color: #b6b6b6
 }
 
-table, th, td {
-  border: 1px solid black;
-}
 
-th, td {
+.sa-flexbox-tr, .sa-flexbox-col {
   padding: 5px;
   text-align: center;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2}
+.sa-flexbox-row:nth-child(even) {background-color: #f2f2f2}
