--- a/src/components/app/components/header/index.css
+++ b/src/components/app/components/header/index.css
@@ -14,6 +14,13 @@
   padding-left: 15px;
 }
 
+.sa-link--alert {
+  color: #FF0000;
+  float: right;
+  margin-top: -80px;
+
+}
+
 .sa-header-logout--button {
   cursor: pointer;
   float: right;
